--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -9,8 +9,28 @@ body {
 }
 .navbar-nav .nav-item .nav-link{
     color: black;
+    text-align: center;
 }
 .navbar-nav .nav-item:hover .nav-link {
     text-decoration-line: underline;
     color: black;
+}
+.values {
+    color: black;
+    text-align: center;
+    font-size: large;
+    font-family: 'Saira Semi Condensed', sans-serif; /* change font*/
+}
+.paragraph {
+    color: black;
+    text-align: left;
+    font-size: medium;
+    font-family: 'Saira Semi Condensed', sans-serif; /* change font*/
+    text-indent: 20px;
+}
+.address {
+    color: #f7fcfe;
+    font-size: medium;
+    opacity: 0.75;
+    font-family: 'Roboto Condensed', sans-serif;
 }
