--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -53,4 +53,9 @@ h5 {
     position: absolute;
     right: 0;
     bottom: 0;
-    z-index: 900; }
+    z-index: 900; 
+}
+/*.menuButton:hover {
+    opacity: 0.5;
+}
+
