--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -75,7 +75,7 @@ h5 {
     max-height: 15rem;
 }
 .cinnroll {
-    background-image: url(/img/cinnroll.jpg);
+    background-image: url(img/cinnroll.jpg);
     background-attachment: fixed;
     background-position: center;
     background-repeat: repeat;
