--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -70,7 +70,7 @@ h5 {
   max-height: 15rem; }
 
 .cinnroll {
-  background-image: url(img/cinnroll.jpg);
+  background-image: url(/img/cinnroll.png);
   background-attachment: fixed;
   background-position: center;
   background-repeat: repeat;
