--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -75,10 +75,11 @@ h5 {
     max-height: 15rem;
 }
 .cinnroll {
-    background-image: url(img/cinnroll.jpg);
+    background-image: url(/img/cinnroll.png);
     background-attachment: fixed;
     background-position: center;
     background-repeat: repeat;
     background-size: 25%;
     background-color: $color-background;
    }
+
